# alfaifi-model-advisor

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md  desktop_launcher.py  launcher.py  pyproject.toml  version_info.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: catalog.yml  ci.yml  release.yml
data/: catalog.json
docs/: RECOMMENDATION_METHODOLOGY.md
installer/: AlfaifiModelAdvisor.iss  Mustakshif.iss
scripts/: Install-Alfaifi.ps1  Install-Mustakshif.ps1  Uninstall-Alfaifi.ps1  Uninstall-Mustakshif.ps1  build_catalog.py  render_brand_assets.py
src/alfaifi_model_advisor/: __init__.py  catalog.py  cli.py  hardware.py  models.py  profiles.py  recommender.py  ui.py
src/mustakshif/: __init__.py  catalog.py  cli.py  desktop.py  installer.py  models.py  profiles.py  recommender.py  service.py  ui.py
tests/: test_catalog.py  test_recommender.py  test_security.py  test_service.py
