[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mustakshif"
version = "0.4.0"
description = "Discover trusted open AI models that fit your device"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["ollama", "local-ai", "llm", "hardware", "model-recommendation"]
dependencies = [
  "psutil>=6.0,<8",
  "rich>=13.9,<15",
]
authors = [
  { name = "Sultan Alfaifi" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: Developers",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
desktop = [
  "PySide6>=6.8,<7",
]
dev = [
  "pyinstaller>=6.21,<7",
  "PySide6>=6.8,<7",
]

[project.urls]
Homepage = "https://github.com/SultanAlfaifi/mustakshif"
Repository = "https://github.com/SultanAlfaifi/mustakshif"
Issues = "https://github.com/SultanAlfaifi/mustakshif/issues"
Changelog = "https://github.com/SultanAlfaifi/mustakshif/blob/main/CHANGELOG.md"

[project.scripts]
mustakshif = "mustakshif.cli:main"

[project.gui-scripts]
mustakshif-desktop = "mustakshif.desktop:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
